--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 <script>
 const anchorDate = new Date("2025-08-12");
 const lyricsOptions = [
-  { text: "When they knock you down\nYou're gonna to get back on your feet", artist: 'The Killers "Battle Born"' },
+  { text: "When they knock you down\nYou're gonna get back on your feet", artist: 'The Killers "Battle Born"' },
   { text: "'Cause baby, I could build a castle\nOut of all the bricks they threw at me\nAnd every day is like a battle", artist: 'Taylor Swift "New Romantics"' },
   { text: "And if your glass heart should crack\nAnd for a second you turn back\nOh no, be strong", artist: 'U2 "Walk On"' },
   { text: "수고했어요 정말 고생했어요\n그댄 나의 자랑이죠", artist: 'Jonghyun "End of a day"' }
