--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     padding-top: 20px;
   }
   .container {
-    background-color: #243745;
+    background: linear-gradient(135deg, #2E4759, #1c2d3a);
     border-radius: 12px;
     box-shadow: 0 0 20px rgba(0,0,0,0.2);
     color: #B5DDF2;
