--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     padding-top: 20px;
   }
   .container {
-    background: linear-gradient(135deg, #2E4759, #1c2d3a);
+    background: linear-gradient(135deg, #243745, #1c2d3a);
     border-radius: 12px;
     box-shadow: 0 0 20px rgba(0,0,0,0.2);
     color: #B5DDF2;
@@ -138,7 +138,7 @@
 </div>
 
 <script>
-const anchorDate = new Date("2025-08-11");
+const anchorDate = new Date("2025-08-12");
 const lyricsOptions = [
   { text: "When they knock you down\nYou're gonna get back on your feet", artist: 'The Killers "Battle Born"' },
   { text: "'Cause baby, I could build a castle\nOut of all the bricks they threw at me\nAnd every day is like a battle", artist: 'Taylor Swift "New Romantics"' },
@@ -184,7 +184,8 @@ function checkShift() {
   }
 
   const resultDiv = document.getElementById("result");
-  // Monthly calendar grid overview for the month of selectedDate
+
+// Monthly calendar grid overview for the month of selectedDate
 const year = selectedDate.getFullYear();
 const month = selectedDate.getMonth();
 
