--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@ table.calendar td, table.calendar th {
   font-size: 0.75em;
   white-space: nowrap;
   padding: 8px;
+  min-width: 50px;
 }
 
   th, td {
