--- a/index.html
+++ b/index.html
@@ -91,10 +91,11 @@
 
 /* Smaller font and no weird breaks in calendar table */
 table.calendar td, table.calendar th {
-  font-size: 0.5em;
-  white-space: nowrap;
-  padding: 8px;
-  min-width: 50px;
+  font-size: 0.75em !important;
+  white-space: nowrap !important;
+  padding: 4px 6px !important;
+  min-width: 50px !important;
+  word-break: keep-all !important;
 }
 
   th, td {
@@ -211,7 +212,7 @@ const endDate = new Date(lastDayOfMonth);
 endDate.setDate(lastDayOfMonth.getDate() + (6 - lastDayOfMonth.getDay())); // Saturday after or on last
 
 let calendarHTML = `<h3 style="text-align:center; color:#B5DDF2;">${monthName} ${year} Calendar Overview</h3>`;
-calendarHTML += `<table style="width: 100%; max-width: 100%; border-collapse: collapse; text-align: center; table-layout: fixed; word-wrap: break-word;">`;
+calendarHTML += `<table class="calendar" style="width: 100%; max-width: 100%; border-collapse: collapse; text-align: center; table-layout: fixed;">`;
 calendarHTML += `<tr>`;
 ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'].forEach(dayName => {
   calendarHTML += `<th style="padding: 8px; background-color:#577B8F; color: white;">${dayName}</th>`;
